--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     h1 {
-      
+
         text-align: center;
     }
 
@@ -78,6 +78,34 @@
       <section class="main">
         <h1>Air Quality</h1>
         <div id="data" class="content-wrap">Loading...</div>
+
+        <div class="content-wrap">
+          <ul>
+            <li>
+
+              <p>  describe the API you selected and what it does</p>
+              <p>  I used the API for air quality data. It returns the local air quality index.</p><br/>
+
+            </li>
+            <li>
+
+              <p> cite the website where you found it</p>
+              <p>  <a href=https://www.iqair.com/>iqair.com</a></p><br/>
+
+            </li>
+            <li>
+
+              <p> describe the options you used for the API request</p>
+              <p>  I used a GET action on the target <a href=http://api.airvisual.com/v2/nearest_city?key=57adf3f0-ecdb-4ec8-9525-0cad691eb717>http://api.airvisual.com/v2/nearest_city?key=[key]</a></p><br/>
+            </li>
+            <li>
+              <p> give two applications where this API would be helpful.</p>
+              <p>  1) It is useful for academic research in Environmental Science and Economics.</p>
+              <p>  2) It raises awareness on environment protection. </p><br/>
+            </li>
+          </ul>
+
+        </div>
       </section>
       <!-- ********************  FOOTER  *********************************** -->
 
