--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         request = new XMLHttpRequest();
         console.log("1 - request object created");
 
-        request.open("GET", "http://api.airvisual.com/v2/nearest_city?key=57adf3f0-ecdb-4ec8-9525-0cad691eb717", true);
+        request.open("GET", "https://api.airvisual.com/v2/nearest_city?key=57adf3f0-ecdb-4ec8-9525-0cad691eb717", true);
         console.log("2 - opened request file");
 
         request.onreadystatechange = function() {
